# nsai-for-infrastructure

./: .gitignore  README.md  line_extending_game_0.ipynb  line_extending_neural.ipynb  line_extending_rules.ipynb  pyproject.toml  setup.py  test_env.ipynb  understanding_alphazero.ipynb  understanding_cartpole.ipynb
scripts/: run_bitstring.py  run_cartpole.py
src/: eval_seeds_investigation.ipynb  eval_seeds_investigation_helper.py  tmoer_license.txt  zg_game_demo_0.ipynb  zl_game_demo_0.ipynb
src/alphazeropp/: __init__.py  main.py
src/alphazeropp/agent/: agent.py  bitstring_agent.py  mcts.py
src/alphazeropp/core/: agent.py  mcts.py  policy_value_net.py
src/alphazeropp/envs/: bitstring.py  cartpole.py  game.py
src/alphazeropp/networks/: bitstring.py  cartpole.py  utils.py
src/alphazeropp/training/: trainer.py
src/alphazeropp/utils/: checkpoint.py  common.py  multiprocessing.py
src/nsai_experiments/: alphazero_torch.py  line_extending_game_tools.py  test_env.py
src/nsai_experiments/general_az_1p/: agent.py  game.py  mcts.py  policy_value_net.py  setup_utils.py  utils.py
src/nsai_experiments/general_az_1p/bitstring/: bitstring_az_impl.py  bitstring_az_impl_milton.py
src/nsai_experiments/new_games_old_engine/: README.md  alphazero_grammar.py  grammargame.py  helpers.py  netgame.py  netgrammargame.py  srgame.py  transformer_encoder.py
src/nsai_experiments/zoning_game/: zg_cfg.py  zg_cfg_policy.py  zg_direct_supervised.ipynb  zg_gym.py  zg_policy.py  zl_gym.py
tests/: conftest.py  test_az_cartpole.py  test_zoning_game.py
(+10 files in other folders)
