[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nsai_experiments"
version = "0.1"
readme = "README.md"
requires-python = ">= 3.9"  # prefer 3.12 if possible
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "ipykernel",
    "nltk",
    "torch >= 2.2",  # prefer >=2.6 if possible
    "torchsummary",
    "scipy",
    "scikit-learn",
    "gymnasium",
    "gymnasium[classic-control]",
    "tensorflow",
    "svgling",
    "sympy",
    "lmfit",
    "tqdm",
]

[project.optional-dependencies]
dev = [
    "pytest"
]
